# UsefulPythonFunctions

./: .gitignore  README.md  example_clearScreen.py  example_menu.py  func_menu.py  funcs.py  pyproject.toml
dist_old/: usefulfunctions2-0.0.1-py3-none-any.whl  usefulfunctions2-0.0.2-py3-none-any.whl
src/usefulfunctions2/: example_clearScreen.py  example_menu.py  menu.py
